  PR 6922    * stabs.c (parse_stab_sun_builtin_type): Parse, but ignore SUN's    'b' and 'v' extensions.